# jobs-decorator

./: CLAUDE.md  README.md  pyproject.toml
examples/: basic.py  gpu_training.py  parallel_jobs.py  pyproject_deps.py  tei_embeddings.py  volumes.py  with_secrets.py
src/jobs_decorator/: __init__.py  backend.py  decorator.py  dependencies.py  handle.py  script.py  sidecar.py
